--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 bottle==0.12.25
 bottle-sqlite==0.2.0
-markdown==3.4.3
 typing_extensions==4.5.0
 gunicorn==20.1.0
 Pygments==2.15.1
+markdown2==2.4.8
